# ADIOS2

./: .gitignore  .travis.yml  CMakeLists.txt  ReadMe.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: backport.yml  everything.yml  pypackaging.yml
bindings/Python/: CMakeLists.txt
bindings/python/: EnginePy.cpp  EnginePy.h  PythonEngine.cpp  PythonEngine.h  PythonInterpreter.h  gluePyBind11.cpp
cmake/: ADIOSFunctions.cmake  DetectOptions.cmake
docs/user_guide/source/: conf.py
docs/user_guide/source/setting_up/source/: cmake.rst
examples/hello/bpWriter/: CMakeLists.txt  dummyEngine.py  examplePythonPlugin.cpp  foo.py  helloBPWriter_nompi_pyext.cpp  testInlinePythonEngine.py  testPythonEngine.py  testPythonEngine2.py
examples/simulations/heatTransfer/write/: IO_adios2.cpp  Settings.cpp  Settings.h  main.cpp
scripts/dashboard/: circle_GNU4_NoMPI.cmake  circle_GNU7_NoMPI.cmake  circle_GNU7_OpenMPI.cmake  postComment.sh  runOnCircle.sh  universal.cmake
scripts/docker/adios2testing/: Dockerfile
scripts/travis/: build-cppcheck.sh  cl_analyze_wrap_gcc.sh  cl_analyze_wrap_gplusplus.sh  cppcheck_wrap_gcc.sh  cppcheck_wrap_gplusplus.sh  run-check.sh  run-cppcheck.sh  run-sa.sh  run.sh  travis_clang-analyzer.cmake  travis_cppcheck.cmake
source/: CMakeLists.txt
source/adios2/: ADIOSConfig.h.in  CMakeLists.txt
source/adios2/core/: IO.cpp
source/adios2/engine/bp5/: BP5Engine.h  BP5Reader.cpp  BP5Writer.cpp  BP5Writer.h  BP5Writer_WithRerouting.cpp
source/adios2/engine/insitumpi/: InSituMPIFunctions.cpp
source/adios2/engine/pyplugin/: PythonInstanceBuilder.h  PythonInterpreter.cpp  PythonInterpreter.h  PythonPluginEngine.cpp  PythonPluginEngine.h
source/adios2/helper/: PythonInterpreter.cpp  adiosPartitioner.cpp  adiosPartitioner.h
source/adios2/toolkit/sst/: CMakeLists.txt
source/adios2/toolkit/sst/dp/: rdma_dp.c
source/adios2/toolkit/transport/file/: FileFStream.cpp  FilePOSIX.cpp  FileStdio.cpp
source/utils/: CMakeLists.txt
source/utils/adios_iotest/: CMakeLists.txt
testing/adios2/bindings/python/: Adios2PythonTestBase.py  CMakeLists.txt  TestBPWriteTypes.py  TestOpenInlinePythonEngineFromPython.py  TestOpenInlinePythonEngineFromPython_nompi.py  TestOpenPythonEngineFromPython.py  TestOpenPythonEngineFromPython_nompi.py  TestPythonEngine.py  TestPythonEngineFromCpp.cpp
testing/adios2/engine/bp/: CMakeLists.txt  TestBPAppendAfterSteps.cpp  TestBPDirectIO.cpp  TestBPParameterSelectSteps.cpp  TestBPReadMultithreaded.cpp  TestBPStepsFileGlobalArray.cpp
testing/adios2/helper/: TestPartitioners.cpp
